name: llvm-tools
version: 0.1.0.0
synopsis: Useful tools built on llvm-analysis
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Development
build-type: Simple
cabal-version: >=1.10

data-files: share/jquery-1.7.1.js
            share/OpenLayers.js
            share/showGraph.js
            share/*.css
            share/img/*.png

-- A longer description of the package.
-- Description:

-- A copyright notice.
-- Copyright:


-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

library
  default-language: Haskell2010
  build-depends: base > 3 && < 5, bytestring, directory, filepath,
                 blaze-html, graphviz, parallel-io,
                 xml, filemanip >= 0.3.5.2,
                 llvm-analysis, llvm-data-interop
  hs-source-dirs: src
  exposed-modules: Data.LLVM.VisualizeGraph
  other-modules: Paths_llvm_tools,
                 Data.LLVM.HtmlWrapper,
                 Data.LLVM.SvgInspection
  ghc-options: -Wall
  ghc-prof-options: -auto-all

executable FindValue
  default-language: Haskell2010
  build-depends: base > 3 && < 5, unordered-containers,
                 llvm-analysis, llvm-data-interop
  main-is: FindValue.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts
  ghc-prof-options: -auto-all

executable ViewIRGraph
  default-language: Haskell2010
  build-depends: base > 3 && < 5, containers, bytestring, cmdargs >= 0.9,
                 graphviz, llvm-analysis, llvm-tools
  main-is: ViewIRGraph.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts -threaded
  ghc-prof-options: -auto-all
