name: llvm-tools
version: 0.1.0.0
synopsis: Useful tools built on llvm-analysis
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Development
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md
data-files: share/jquery-1.7.1.js
            share/OpenLayers.js
            share/showGraph.js
            share/*.css
            share/img/*.png
description: This package includes some tools to visualize the LLVM IR.
             Current visualizations include static call graphs, CFGs, CDGs,
             dominator trees, and some simple escape graphs.  Output formats
             include most graphviz-supported formats, along with an
             HTML-based format.

library
  default-language: Haskell2010
  build-depends: base > 3 && < 5, bytestring, directory, filepath,
                 blaze-html >= 0.5, graphviz, parallel-io, blaze-markup,
                 xml, filemanip >= 0.3.5.2,
                 llvm-analysis, llvm-data-interop
  hs-source-dirs: src
  exposed-modules: LLVM.VisualizeGraph
  other-modules: Paths_llvm_tools,
                 LLVM.HtmlWrapper,
                 LLVM.SvgInspection
  ghc-options: -Wall
  ghc-prof-options: -auto-all

executable DumpLLVMModule
  default-language: Haskell2010
  build-depends: base > 3 && < 5, llvm-data-interop
  main-is: DumpLLVMModule.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts

executable FindValue
  default-language: Haskell2010
  build-depends: base > 3 && < 5, unordered-containers,
                 llvm-analysis, llvm-data-interop
  main-is: FindValue.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts
  ghc-prof-options: -auto-all

executable ViewIRGraph
  default-language: Haskell2010
  build-depends: base > 3 && < 5, containers, optparse-applicative >= 0.4, mtl,
                 graphviz, llvm-analysis, llvm-tools
  main-is: ViewIRGraph.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts -threaded
  ghc-prof-options: -auto-all

executable TypeUnificationCheck
  default-language: Haskell2010
  build-depends: base > 3 && < 5, bytestring, attoparsec,
                 process-conduit, attoparsec-conduit, conduit,
                 llvm-analysis, llvm-data-interop
  main-is: TypeUnificationCheck.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts -threaded
  ghc-prof-options: -auto-all
