name: llvm-tools
version: 0.2.0.0
synopsis: Useful tools built on llvm-analysis
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Development
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md
data-files: share/jquery-1.7.1.js
            share/OpenLayers.js
            share/showGraph.js
            share/*.css
            share/img/*.png
description: This package includes some tools to visualize the LLVM IR.
             Current visualizations include static call graphs, CFGs, CDGs,
             dominator trees, and some simple escape graphs.  Output formats
             include most graphviz-supported formats, along with an
             HTML-based format.

library
  default-language: Haskell2010
  build-depends: base == 4.*,
                 blaze-html >= 0.5,
                 filemanip >= 0.3.5.2,
                 llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 bytestring, directory, filepath, xml,
                 graphviz, parallel-io, blaze-markup
  hs-source-dirs: src
  exposed-modules: LLVM.VisualizeGraph
  other-modules: Paths_llvm_tools,
                 LLVM.HtmlWrapper,
                 LLVM.SvgInspection
  ghc-options: -Wall
  ghc-prof-options: -auto-all

executable DumpLLVMModule
  default-language: Haskell2010
  build-depends: base == 4.*,
                 llvm-data-interop >= 0.2.0
  main-is: DumpLLVMModule.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts

executable FindValue
  default-language: Haskell2010
  build-depends: base == 4.*,
                 llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 unordered-containers
  main-is: FindValue.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts
  ghc-prof-options: -auto-all

executable ViewIRGraph
  default-language: Haskell2010
  build-depends: base == 4.*,
                 optparse-applicative >= 0.5.0,
                 llvm-analysis >= 0.2.0,
                 llvm-tools >= 0.2.0.0,
                 containers, graphviz
  main-is: ViewIRGraph.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts -threaded
  ghc-prof-options: -auto-all

executable TypeUnificationCheck
  default-language: Haskell2010
  build-depends: base == 4.*,
                 llvm-analysis >= 0.2.0,
                 llvm-data-interop >= 0.2.0,
                 bytestring, attoparsec,
                 process-conduit, attoparsec-conduit, conduit
  main-is: TypeUnificationCheck.hs
  hs-source-dirs: tools
  ghc-options: -Wall -rtsopts -threaded
  ghc-prof-options: -auto-all
